--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+climate_timeseries/.ipynb_checkpoints/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
